Changes to editbook.html and spacing error correction on addbook.html and editbook.html

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -466,19 +466,18 @@ footer {
 
 /*    End of book.html    */
 
-/*    ADDBOOK.HTML    */
+/*    ADDBOOK.HTML & EDITBOOK.HTML    */
 
 .add_book {
-    margin-left: 100px;
-    padding-top: 10px;
-    margin-top: 20px;
-    margin-bottom: 20px;
+    margin: 30px 0 30px 100px;
     padding-bottom: 0px;
 }
 
 .add_form {
     margin-top: 20px;
 }
+
+/*    End of addbook.html & editbook.html    */
 
 /*    POSTS.HTML    */
 
